--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav {
   background-color: var(--primary-color);
   border-right: 2px solid rgba(200, 200, 200, 0.1);
   width: 200px;
-  height: 100vh;
+  height: 100%;
   color: #ffffff;
   position: fixed;
   top: 0;
